--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,10 +1,17 @@
 .product{
     display: block;
     width: 300px;
+    margin: 10px;
 }
 
 .product img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+.product p{
+    color: #40290d;
+    margin-top: 10px;
+    font-size: 2rem;
 }
