--- a/src/components/ItemCount/itemCount.css
+++ b/src/components/ItemCount/itemCount.css
@@ -1,6 +1,6 @@
 .counter{
     width: fit-content;
-    background-color: #a67250;
+    background-color: #9D7456;
     margin: auto;
     padding: 1rem;
     text-align: center;
