--- a/src/components/ItemDetail/itemDetail.css
+++ b/src/components/ItemDetail/itemDetail.css
@@ -12,9 +12,11 @@
 }
 
 .detail__image{
-    width: 100%;
+    height: 500px;
+    margin: 10px;
 }
 
 .content{
-    width: 100%;
+    margin: 10px;
+    color: #40290d;
 }
