--- a/src/components/ItemCount/itemCount.css
+++ b/src/components/ItemCount/itemCount.css
@@ -2,6 +2,6 @@
     width: fit-content;
     background-color: #9D7456;
     margin: auto;
-    padding: 1rem;
+    padding: 10px;
     text-align: center;
 }
