--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,12 +1,15 @@
-.product{
-    display: block;
+.product{ 
+    height: auto;
     width: 300px;
     margin: 10px;
     padding-bottom: 80px;
+    border: 2px solid #40290d;
+    border-radius: 8px;
+    padding: 16px;
 }
 
 .product img{
-    height: 100%;
+    height: 80%;
     width: 100%;
     object-fit: cover;
     margin-right: 10px;
@@ -24,4 +27,18 @@
     margin-top: 8px;
     font-size: 1.5rem;
     text-align: center;
+}
+
+.vacio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 80px;
+}
+
+.agregarP{
+    color: #40290d;
+    font-size: 1.5rem;
+    text-decoration: underline;
+    padding-top: 24px;
 }
